# random-melody

./: .gitignore  LICENSE  pyproject.toml
random_melody/: __main__.py  main.py  methods.py  utils.py
